# magic-portal

./: main.py  pyproject.toml  replit_zip_error_log.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
data/: content.json
utils/: content_analyzer.py  data_manager.py  search_utils.py
