[project]
name = "repl-nix-magicportalorganizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "numpy>=2.1.3",
    "openai>=1.54.3",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
    "streamlit>=1.40.0",
    "trafilatura>=1.12.2",
]
